arregle algo en el html q m equivoque

--- a/index.html
+++ b/index.html
@@ -7,6 +7,6 @@
   <body>
     <h1>Hola mundo soy luca soto</h1>
 
-    <script src="./script.js"></script>
+    <script src="./public/script.js"></script>
   </body>
 </html>
