--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <title>Ejercicios javascript lucas soto</title>
   </head>
   <body>
-    <h1>Hola mundo soy luca soto</h1>
+    <h1>PIEDRA PAPEL O TIJERA</h1>
 
     <script src="./public/script.js"></script>
   </body>
